--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>技术支持 - 我的应用</title>
+    <title>说点闲话APP - 支持网站</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,39 +61,35 @@
 <body>
     <header>
         <div class="container">
-            <h1>技术支持 - 我的应用</h1>
+            <h1>说点闲话APP - 支持网站</h1>
         </div>
     </header>
 
     <main>
         <div class="container">
             <section>
+                <h2>功能介绍</h2>
+                <ul>
+                    <li>您可以选择您喜欢的文章进行朗读并录音，此外，还可以发送文字、语音、图像动态，APP还提供了每日一读等功能，您可以登录APP后进行体验</li>
+                    <!-- 添加更多 FAQ -->
+                </ul>
                 <h2>常见问题解答 (FAQ)</h2>
                 <ul>
-                    <li><strong>问:</strong> 我的应用如何使用？<br>
-                        <strong>答:</strong> 请参阅我们的<a href="https://example.com/help">帮助文档</a>。</li>
                     <li><strong>问:</strong> 如何解决登录问题？<br>
-                        <strong>答:</strong> 确保你输入了正确的用户名和密码。如果忘记密码，请点击“忘记密码”进行重置。</li>
+                        <strong>答:</strong> 目前只提供了手机短信验证码的登录方式。</li>
+                    <li><strong>问:</strong> 使用时出现了问题怎么解决？<br>
+                        <strong>答:</strong> 您可以通过APP“我的页面“的问题反馈功能进行反馈，此外也可以通过下方的电子邮箱联系我们解决问题。</li>
                     <!-- 添加更多 FAQ -->
                 </ul>
             </section>
 
             <section>
                 <h2>联系我们</h2>
-                <p>如果你有任何疑问或需要进一步的帮助，请通过以下方式联系我们：</p>
                 <ul>
-                    <li>电子邮件：<a href="mailto:support@example.com">support@example.com</a></li>
-                    <li>在线表格：<a href="https://example.com/contact">提交问题</a></li>
-                    <!-- 添加更多联系方式 -->
+                    <li>电子邮件：yupublic@163.com</li>
                 </ul>
             </section>
         </div>
     </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 我的应用. 保留所有权利.</p>
-        </div>
-    </footer>
 </body>
 </html>
