--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             <section>
                 <h2>联系我们</h2>
                 <ul>
+                    <li>联系人：于峰</li>
+                    <li>联系人电话：18604688607</li>
                     <li>电子邮件：yupublic@163.com</li>
                 </ul>
             </section>
